--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.13.4",
     "firebase": "~2.4.2",
     "lodash": "^4.13.1",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "request": "^2.72.0"
   }
 }
